src/test/deca/context/valid/created/Objet/passe3_6.deca
// Description:
//    teste un convFloat sur le return
// Resultats:
//    Erreur contextuelle
//    Ligne 9 : Error: Illegal RValue type, got int, expected boolean

class A {
    float m() {
        return 3;
    }
}

{

}