src/test/deca/context/invalid/created/passe3_5.deca
// Description:
//    teste un return dans une methode void
// Resultats:
//    Erreur contextuelle
//    Ligne 9 : Error: Illegal RValue type, got boolean, expected int

class A {
    void m() {
        return 3;
    }
}

{

}